Indented YAML with 2 spaces

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -23,6 +23,12 @@
             "options": {
                 "parser": "html"
             }
+        },
+        {
+            "files": "**/*.yaml",
+            "options": {
+                "tabWidth": 2
+            }
         }
     ]
 }
