--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,11 +6,40 @@ on:
       - main
 
 jobs:
-  publish:
+  publish-base:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+
+      - name: Install DevContainer CLI
+        run: npm install -g @devcontainers/cli
+
+      - name: Build and Push Image to Docker Hub
+        env:
+          container-name: base-dev-container
+          repository-name: ${{ secrets.DOCKERHUB_USERNAME }}/base-dev-container
+        run: |
+          devcontainer build --config ${{ env.container-name }}.json --image-name ${{ env.repository-name }} --workspace-folder .
+          docker push ${{ env.repository-name }}
+
+  publish-dependents:
+    needs: publish-base
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        type: [base, python, web]
+        type: [python, web]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -32,7 +61,7 @@ jobs:
       - name: Build and Push Image to Docker Hub
         env:
           container-name: ${{ matrix.type }}-dev-container
-          repository-name: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.container-name }}
+          repository-name: ${{ secrets.DOCKERHUB_USERNAME }}${{ matrix.type }}-dev-container
         run: |
           devcontainer build --config ${{ env.container-name }}.json --image-name ${{ env.repository-name }} --workspace-folder .
           docker push ${{ env.repository-name }}
