Install npm dependencies post-creation of base template

--- a/templates/base/.devcontainer.json
+++ b/templates/base/.devcontainer.json
@@ -11,5 +11,7 @@
         "vscode": {
             "extensions": ["GitHub.copilot", "eamodio.gitlens", "github.vscode-github-actions"]
         }
-    }
+    },
+
+    "postCreateCommand": "npm install"
 }
