Update non-base template images to GHCR URLs

--- a/templates/python/.devcontainer.json
+++ b/templates/python/.devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Python",
-    "image": "docker.io/situdeveloper/templates/base",
+    "image": "ghcr.io/SituDevelopment/templates/base",
 
     "features": {
         "ghcr.io/devcontainers/features/python:1": {
