--- a/templates/web/.devcontainer.json
+++ b/templates/web/.devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Web",
-    "image": "docker.io/situdeveloper/templates/base",
+    "image": "ghcr.io/SituDevelopment/templates/base",
 
     "customizations": {
         "vscode": {
