--- a/.github/labeller.yaml
+++ b/.github/labeller.yaml
@@ -6,14 +6,7 @@ enhancement:
 
 dependencies:
   - changed-files:
-      - any-glob-to-any-file:
-          [
-            "package.json",
-            "package-lock.json",
-            "requirements.txt",
-            "composer.json",
-            "composer.lock",
-          ]
+      - any-glob-to-any-file: ["package.json", "package-lock.json"]
 
 documentation:
   - changed-files:
@@ -22,15 +15,3 @@ documentation:
 github_actions:
   - changed-files:
       - any-glob-to-any-file: [".github/workflows/*.yaml"]
-
-javascript:
-  - changed-files:
-      - any-glob-to-any-file: ["*.js", "*.ts", "package.json", "package-lock.json"]
-
-php:
-  - changed-files:
-      - any-glob-to-any-file: ["*.php", "composer.json", "composer.lock"]
-
-python:
-  - changed-files:
-      - any-glob-to-any-file: ["*.py", "requirements.txt"]
