Ensure features are published before templates

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,6 +21,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-templates:
+    needs: [publish-features]
     permissions:
       packages: write
     runs-on: ubuntu-latest
