--- a/templates/python/.devcontainer.json
+++ b/templates/python/.devcontainer.json
@@ -4,7 +4,7 @@
 
     "features": {
         "ghcr.io/devcontainers/features/python:1": {
-            "version": "${templateOption:pythonVersion}"
+            "version": "3.10"
         }
     },
 
@@ -28,5 +28,5 @@
         }
     },
 
-    "postCreateCommand": ".devcontainer/install-with.sh ${templateOption:dependencyManager}"
+    "postCreateCommand": "pip install poetry && poetry install"
 }
