--- a/templates/python/devcontainer-template.json
+++ b/templates/python/devcontainer-template.json
@@ -2,19 +2,5 @@
     "id": "python",
     "version": "1.0.0",
     "name": "Python Dev Container",
-    "description": "Dev Container configuration for Python template",
-    "options": {
-        "dependencyManager": {
-            "type": "string",
-            "description": "Which package manager to use.\nThis will control the commands used to install dependencies.",
-            "enum": ["pip", "poetry"],
-            "default": "pip"
-        },
-        "pythonVersion": {
-            "type": "string",
-            "description": "The version of Python to use.\nThis will control the version passed to the Python feature.",
-            "proposals": ["3.10"],
-            "default": "3.10"
-        }
-    }
+    "description": "Dev Container configuration for Python template"
 }
