--- a/templates/base/.devcontainer.json
+++ b/templates/base/.devcontainer.json
@@ -21,5 +21,5 @@
         }
     },
 
-    "postCreateCommand": "npm install"
+    "postCreateCommand": "git config --global --add safe.directory ${containerWorkspaceFolder} && npm install"
 }
