--- a/templates/base/.devcontainer.json
+++ b/templates/base/.devcontainer.json
@@ -21,5 +21,6 @@
         }
     },
 
-    "postCreateCommand": "git config --global --add safe.directory ${containerWorkspaceFolder} && npm install"
+    "postCreateCommand": "npm install",
+    "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}"
 }
