Document hacky Git fix

--- a/templates/base/.devcontainer.json
+++ b/templates/base/.devcontainer.json
@@ -22,5 +22,7 @@
     },
 
     "postCreateCommand": "npm install",
+
+    // required for Dev Containers which use Docker Compose: https://github.com/microsoft/vscode-remote-release/issues/7923
     "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}"
 }
